# indian-name-generator

./: .gitignore  README.md  mkdocs.yml  name_generator.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/: first_names.csv  last_names.csv
docs/: index.md  installation.md
docs/usage/: command-line.md  python-api.md
src/: __init__.py  cli.py
