[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-name-generator"
version = "0.1.0"
description = "A Python package to generate Indian names"
readme = "README.md"
authors = [{ name = "Author" }]  # Fixed missing closing quote
license = { text = "CC BY-NC-SA 4.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7"
dependencies = ["pandas>=1.3.0"]

[project.scripts]
generate-indian-name = "cli:main"